parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration
Rule 2     program -> program external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> type_specifier ID LPAREN parameter_list RPAREN compound_statement
Rule 6     function_definition -> type_specifier ID LPAREN RPAREN compound_statement
Rule 7     declaration -> init_declarator_list SEMI
Rule 8     init_declarator_list -> type_specifier init_declarator
Rule 9     type_specifier -> int
Rule 10    type_specifier -> float
Rule 11    type_specifier -> str
Rule 12    init_declarator -> declarator
Rule 13    init_declarator -> declarator EQUALS initializer
Rule 14    declarator -> ID
Rule 15    parameter_list -> parameter
Rule 16    parameter_list -> parameter_list COMMA parameter
Rule 17    parameter -> type_specifier declarator
Rule 18    initializer -> assignment_expression
Rule 19    statement_list -> statement
Rule 20    statement_list -> statement_list statement
Rule 21    statement -> expression_statement
Rule 22    statement -> declaration
Rule 23    statement -> compound_statement
Rule 24    statement -> selection_statement
Rule 25    statement -> iteration_statement
Rule 26    statement -> jump_statement
Rule 27    expression_statement -> expression SEMI
Rule 28    compound_statement -> LBRACE statement_list RBRACE
Rule 29    compound_statement -> LBRACE RBRACE
Rule 30    selection_statement -> if LPAREN expression RPAREN statement
Rule 31    selection_statement -> if LPAREN expression RPAREN statement else statement
Rule 32    iteration_statement -> while LPAREN expression RPAREN statement
Rule 33    iteration_statement -> do statement while LPAREN expression RPAREN SEMI
Rule 34    iteration_statement -> for LPAREN expression SEMI expression SEMI expression RPAREN statement
Rule 35    jump_statement -> return expression SEMI
Rule 36    expression -> assignment_expression
Rule 37    expression -> expression COMMA assignment_expression
Rule 38    assignment_expression -> conditional_expression
Rule 39    assignment_expression -> ID EQUALS assignment_expression
Rule 40    conditional_expression -> logical_or_expression
Rule 41    conditional_expression -> logical_or_expression TERNARY expression COLON conditional_expression
Rule 42    logical_or_expression -> logical_and_expression
Rule 43    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 44    logical_and_expression -> equality_expression
Rule 45    logical_and_expression -> logical_and_expression LAND equality_expression
Rule 46    equality_expression -> relational_expression
Rule 47    equality_expression -> equality_expression EQ relational_expression
Rule 48    equality_expression -> equality_expression NE relational_expression
Rule 49    relational_expression -> additive_expression
Rule 50    relational_expression -> relational_expression LT additive_expression
Rule 51    relational_expression -> relational_expression GT additive_expression
Rule 52    relational_expression -> relational_expression LE additive_expression
Rule 53    relational_expression -> relational_expression GE additive_expression
Rule 54    additive_expression -> multiplicative_expression
Rule 55    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 56    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 57    multiplicative_expression -> unary_expression
Rule 58    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 59    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 60    multiplicative_expression -> multiplicative_expression MODULO unary_expression
Rule 61    unary_expression -> postfix_expression
Rule 62    unary_expression -> LNOT unary_expression
Rule 63    unary_expression -> MINUS unary_expression
Rule 64    unary_expression -> INCREMENT unary_expression
Rule 65    unary_expression -> DECREMENT unary_expression
Rule 66    postfix_expression -> primary_expression
Rule 67    postfix_expression -> ID LPAREN argument_expression_list RPAREN
Rule 68    primary_expression -> ID
Rule 69    primary_expression -> INTEGER
Rule 70    primary_expression -> FLOAT
Rule 71    primary_expression -> STR
Rule 72    primary_expression -> LPAREN expression RPAREN
Rule 73    argument_expression_list -> assignment_expression
Rule 74    argument_expression_list -> argument_expression_list COMMA assignment_expression

Terminals, with rules where they appear

COLON                : 41
COMMA                : 16 37 74
DECREMENT            : 65
DIVIDE               : 59
EQ                   : 47
EQUALS               : 13 39
FLOAT                : 70
GE                   : 53
GT                   : 51
ID                   : 5 6 14 39 67 68
INCREMENT            : 64
INTEGER              : 69
LAND                 : 45
LBRACE               : 28 29
LE                   : 52
LNOT                 : 62
LOR                  : 43
LPAREN               : 5 6 30 31 32 33 34 67 72
LT                   : 50
MINUS                : 56 63
MODULO               : 60
NE                   : 48
PLUS                 : 55
RBRACE               : 28 29
RPAREN               : 5 6 30 31 32 33 34 67 72
SEMI                 : 7 27 33 34 34 35
STR                  : 71
TERNARY              : 41
TIMES                : 58
do                   : 33
else                 : 31
error                : 
float                : 10
for                  : 34
if                   : 30 31
int                  : 9
return               : 35
str                  : 11
while                : 32 33

Nonterminals, with rules where they appear

additive_expression  : 49 50 51 52 53 55 56
argument_expression_list : 67 74
assignment_expression : 18 36 37 39 73 74
compound_statement   : 5 6 23
conditional_expression : 38 41
declaration          : 4 22
declarator           : 12 13 17
equality_expression  : 44 45 47 48
expression           : 27 30 31 32 33 34 34 34 35 37 41 72
expression_statement : 21
external_declaration : 1 2
function_definition  : 3
init_declarator      : 8
init_declarator_list : 7
initializer          : 13
iteration_statement  : 25
jump_statement       : 26
logical_and_expression : 42 43 45
logical_or_expression : 40 41 43
multiplicative_expression : 54 55 56 58 59 60
parameter            : 15 16
parameter_list       : 5 16
postfix_expression   : 61
primary_expression   : 66
program              : 2 0
relational_expression : 46 47 48 50 51 52 53
selection_statement  : 24
statement            : 19 20 30 31 31 32 33 34
statement_list       : 20 28
type_specifier       : 5 6 8 17
unary_expression     : 57 58 59 60 62 63 64 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration
    (2) program -> . program external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (6) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (7) declaration -> . init_declarator_list SEMI
    (9) type_specifier -> . int
    (10) type_specifier -> . float
    (11) type_specifier -> . str
    (8) init_declarator_list -> . type_specifier init_declarator

    int             shift and go to state 7
    float           shift and go to state 8
    str             shift and go to state 9

    program                        shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5
    init_declarator_list           shift and go to state 6

state 1

    (0) S' -> program .
    (2) program -> program . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (6) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (7) declaration -> . init_declarator_list SEMI
    (9) type_specifier -> . int
    (10) type_specifier -> . float
    (11) type_specifier -> . str
    (8) init_declarator_list -> . type_specifier init_declarator

    int             shift and go to state 7
    float           shift and go to state 8
    str             shift and go to state 9

    external_declaration           shift and go to state 10
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5
    init_declarator_list           shift and go to state 6

state 2

    (1) program -> external_declaration .

    int             reduce using rule 1 (program -> external_declaration .)
    float           reduce using rule 1 (program -> external_declaration .)
    str             reduce using rule 1 (program -> external_declaration .)
    $end            reduce using rule 1 (program -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    int             reduce using rule 3 (external_declaration -> function_definition .)
    float           reduce using rule 3 (external_declaration -> function_definition .)
    str             reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    int             reduce using rule 4 (external_declaration -> declaration .)
    float           reduce using rule 4 (external_declaration -> declaration .)
    str             reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    (6) function_definition -> type_specifier . ID LPAREN RPAREN compound_statement
    (8) init_declarator_list -> type_specifier . init_declarator
    (12) init_declarator -> . declarator
    (13) init_declarator -> . declarator EQUALS initializer
    (14) declarator -> . ID

    ID              shift and go to state 11

    init_declarator                shift and go to state 12
    declarator                     shift and go to state 13

state 6

    (7) declaration -> init_declarator_list . SEMI

    SEMI            shift and go to state 14


state 7

    (9) type_specifier -> int .

    ID              reduce using rule 9 (type_specifier -> int .)


state 8

    (10) type_specifier -> float .

    ID              reduce using rule 10 (type_specifier -> float .)


state 9

    (11) type_specifier -> str .

    ID              reduce using rule 11 (type_specifier -> str .)


state 10

    (2) program -> program external_declaration .

    int             reduce using rule 2 (program -> program external_declaration .)
    float           reduce using rule 2 (program -> program external_declaration .)
    str             reduce using rule 2 (program -> program external_declaration .)
    $end            reduce using rule 2 (program -> program external_declaration .)


state 11

    (5) function_definition -> type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    (6) function_definition -> type_specifier ID . LPAREN RPAREN compound_statement
    (14) declarator -> ID .

    LPAREN          shift and go to state 15
    EQUALS          reduce using rule 14 (declarator -> ID .)
    SEMI            reduce using rule 14 (declarator -> ID .)


state 12

    (8) init_declarator_list -> type_specifier init_declarator .

    SEMI            reduce using rule 8 (init_declarator_list -> type_specifier init_declarator .)


state 13

    (12) init_declarator -> declarator .
    (13) init_declarator -> declarator . EQUALS initializer

    SEMI            reduce using rule 12 (init_declarator -> declarator .)
    EQUALS          shift and go to state 16


state 14

    (7) declaration -> init_declarator_list SEMI .

    int             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    float           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    str             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    $end            reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    RBRACE          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    LBRACE          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    if              reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    while           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    do              reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    for             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    return          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    ID              reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    LNOT            reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    MINUS           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    INCREMENT       reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    DECREMENT       reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    INTEGER         reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    FLOAT           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    STR             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    LPAREN          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    else            reduce using rule 7 (declaration -> init_declarator_list SEMI .)


state 15

    (5) function_definition -> type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    (6) function_definition -> type_specifier ID LPAREN . RPAREN compound_statement
    (15) parameter_list -> . parameter
    (16) parameter_list -> . parameter_list COMMA parameter
    (17) parameter -> . type_specifier declarator
    (9) type_specifier -> . int
    (10) type_specifier -> . float
    (11) type_specifier -> . str

    RPAREN          shift and go to state 19
    int             shift and go to state 7
    float           shift and go to state 8
    str             shift and go to state 9

    type_specifier                 shift and go to state 17
    parameter_list                 shift and go to state 18
    parameter                      shift and go to state 20

state 16

    (13) init_declarator -> declarator EQUALS . initializer
    (18) initializer -> . assignment_expression
    (38) assignment_expression -> . conditional_expression
    (39) assignment_expression -> . ID EQUALS assignment_expression
    (40) conditional_expression -> . logical_or_expression
    (41) conditional_expression -> . logical_or_expression TERNARY expression COLON conditional_expression
    (42) logical_or_expression -> . logical_and_expression
    (43) logical_or_expression -> . logical_or_expression LOR logical_and_expression
    (44) logical_and_expression -> . equality_expression
    (45) logical_and_expression -> . logical_and_expression LAND equality_expression
    (46) equality_expression -> . relational_expression
    (47) equality_expression -> . equality_expression EQ relational_expression
    (48) equality_expression -> . equality_expression NE relational_expression
    (49) relational_expression -> . additive_expression
    (50) relational_expression -> . relational_expression LT additive_expression
    (51) relational_expression -> . relational_expression GT additive_expression
    (52) relational_expression -> . relational_expression LE additive_expression
    (53) relational_expression -> . relational_expression GE additive_expression
    (54) additive_expression -> . multiplicative_expression
    (55) additive_expression -> . additive_expression PLUS multiplicative_expression
    (56) additive_expression -> . additive_expression MINUS multiplicative_expression
    (57) multiplicative_expression -> . unary_expression
    (58) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (59) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (60) multiplicative_expression -> . multiplicative_expression MODULO unary_expression
    (61) unary_expression -> . postfix_expression
    (62) unary_expression -> . LNOT unary_expression
    (63) unary_expression -> . MINUS unary_expression
    (64) unary_expression -> . INCREMENT unary_expression
    (65) unary_expression -> . DECREMENT unary_expression
    (66) postfix_expression -> . primary_expression
    (67) postfix_expression -> . ID LPAREN argument_expression_list RPAREN
    (68) primary_expression -> . ID
    (69) primary_expression -> . INTEGER
    (70) primary_expression -> . FLOAT
    (71) primary_expression -> . STR
    (72) primary_expression -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    LNOT            shift and go to state 34
    MINUS           shift and go to state 31
    INCREMENT       shift and go to state 35
    DECREMENT       shift and go to state 36
    INTEGER         shift and go to state 39
    FLOAT           shift and go to state 40
    STR             shift and go to state 41
    LPAREN          shift and go to state 38

    initializer                    shift and go to state 21
    assignment_expression          shift and go to state 22
    conditional_expression         shift and go to state 23
    logical_or_expression          shift and go to state 25
    logical_and_expression         shift and go to state 26
    equality_expression            shift and go to state 27
    relational_expression          shift and go to state 28
    additive_expression            shift and go to state 29
    multiplicative_expression      shift and go to state 30
    unary_expression               shift and go to state 32
    postfix_expression             shift and go to state 33
    primary_expression             shift and go to state 37

state 17

    (17) parameter -> type_specifier . declarator
    (14) declarator -> . ID

    ID              shift and go to state 43

    declarator                     shift and go to state 42

state 18

    (5) function_definition -> type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    (16) parameter_list -> parameter_list . COMMA parameter

    RPAREN          shift and go to state 44
    COMMA           shift and go to state 45


state 19

    (6) function_definition -> type_specifier ID LPAREN RPAREN . compound_statement
    (28) compound_statement -> . LBRACE statement_list RBRACE
    (29) compound_statement -> . LBRACE RBRACE

    LBRACE          shift and go to state 47

    compound_statement             shift and go to state 46

state 20

    (15) parameter_list -> parameter .

    RPAREN          reduce using rule 15 (parameter_list -> parameter .)
    COMMA           reduce using rule 15 (parameter_list -> parameter .)


state 21

    (13) init_declarator -> declarator EQUALS initializer .

    SEMI            reduce using rule 13 (init_declarator -> declarator EQUALS initializer .)


state 22

    (18) initializer -> assignment_expression .

    SEMI            reduce using rule 18 (initializer -> assignment_expression .)


state 23

    (38) assignment_expression -> conditional_expression .

    SEMI            reduce using rule 38 (assignment_expression -> conditional_expression .)
    RPAREN          reduce using rule 38 (assignment_expression -> conditional_expression .)
    COMMA           reduce using rule 38 (assignment_expression -> conditional_expression .)
    COLON           reduce using rule 38 (assignment_expression -> conditional_expression .)


state 24
